@@ -1,3 +1,8 @@
+2007-05-22  Maciej W. Rozycki  <macro@mips.com>
+
+	* gdb.texinfo (Remote Configuration): Document "set/show
+	remoteflow".
+
 2007-05-16  Daniel Jacobowitz  <dan@codesourcery.com>
 
 	* gdb.texinfo (MIPS): Remove documentation for set mips saved-gpreg-size,
